tests/linear/linear-non-005/expected
Example Non-Linearly Wired Circuits
Input is dangling
## Circuits
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
../../shared/linear-non/DanglingInput.sv:5:22-26: Linearity Error:
left := USED

```
## Verilator
```
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/DanglingInput.sv:3:30: Signal is not used: 'right'
                                                                    : ... In instance DanglingInput
    3 |               , input  logic right
      |                              ^~~~~
                       ... For warning description see https://verilator.org/warn/UNUSEDSIGNAL?v=5.002
                       ... Use "/* verilator lint_off UNUSEDSIGNAL */" and lint_on around source to disable this message.
%Error: Exiting due to 1 warning(s)
```
